--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
-	"token": "YOUR LOGIN TOKEN HERE",
+	"token": "MzAxOTA2MTk1MTM1MDcwMjA4.C9D-WA.roclXrOgEcyKtyJvjbf98INalrk",
 	"servers": [
-		"ID 1ST SERVER",
-		"ID 2ND SERVER"
+		"293382762440949761",
+		"302077791707332620"
 	],
-	"roleName": "THE ROLE NAME YOU WANT TO CHANGE ITS COLOR FROM HERE",
+	"roleName": "Disco",
 	"colors": 12,
 	"speed": 60000,
-	"logging": true
+	"logging": false
 }
